--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.88.13",
     "@react-three/fiber": "^8.15.11",
+    "@vapi-ai/web": "^2.3.5",
     "framer-motion": "^10.16.5",
     "gsap": "^3.12.2",
     "lucide-react": "^0.344.0",
