--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/three": "^0.158.3",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "daisyui": "^4.12.10",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
